fixe account tab widht on iphone

--- a/bugs/client/accountApp/src/view/initialStyles.css
+++ b/bugs/client/accountApp/src/view/initialStyles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .account-tab {
-    width: 270px;
+    width: 285px;
 }
 
 .account--fields-list {
